--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "react-day-picker/style.css";
 
 @theme {
   /* primary */
@@ -58,9 +59,12 @@
 
 /* For data picker */
 
-.rdp {
-  --rdp-cell-size: 32px !important;
+.rdp-root {
   --rdp-accent-color: theme(--color-accent-500) !important;
-  --rdp-background-color: theme(--color-accent-600) !important;
+  --rdp-accent-background-color: theme(--color-accent-600) !important;
+  --rdp-day-height: 30px !important; /* The height of the day cells. */
+  --rdp-day-width: 30px !important; /* The width of the day cells. */
+  --rdp-day_button-height: 30px !important;
+  --rdp-day_button-width: 30px !important;
   margin: 0 !important;
 }
